@@ -23,9 +23,14 @@ import ru.practicum.shareit.user.dao.UserDao;
 import ru.practicum.shareit.user.model.User;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -52,7 +57,7 @@ public class ItemServiceImpl implements ItemService {
         dao.findById(itemId).orElseThrow(() -> new NotFoundException("Вещи нет"));
         Item item = dao.findById(itemId).orElseThrow(() -> new NotFoundException("Нет предмета по id: " + userId));
         ;
-        if (dto.getName() != null) {
+        if (dto.getName() != null && !(dto.getName().isBlank())) {
             item.setName(dto.getName());
         }
         if (dto.getDescription() != null) {
@@ -69,37 +74,43 @@ public class ItemServiceImpl implements ItemService {
     @Override
     @Transactional(readOnly = true)
     public ItemDtoByOwner findItemById(long userId, long itemId) {
-        Item item = dao.findById(itemId).orElseThrow(() -> new NotFoundException("Вещь не найдена."));
-        List<Comment> comments = commentDao.findByItemId(itemId);
-
-        LocalDateTime now = LocalDateTime.now();
-        List<Booking> lastBookings = bookingDao.findByItemIdAndItemOwnerIdAndStartIsBeforeAndStatusIsNot(itemId, userId,
-                now, BookingStatus.REJECTED);
-        List<Booking> nextBookings = bookingDao.findByItemIdAndItemOwnerIdAndStartIsAfterAndStatusIsNot(itemId, userId,
-                now, BookingStatus.REJECTED);
-
-        log.info("Найдена вещь с айди {}", itemId);
-        return ItemMapper.doItemDtoByOwner(item, lastBookings, nextBookings, comments);
+        Item item = dao.findById(itemId).orElseThrow(() -> new NotFoundException("Нет предмета по id:" + itemId));
+        Long ownerId = item.getOwner().getId();
+        List<Comment> comments = commentDao.findAllByItemId(item.getId());
+        List<Booking> bookings = bookingDao.findAllByItemIdAndEndBefore(itemId, LocalDateTime.now());
+        Booking lastBooking = getLastBooking(bookings);
+        Booking nextBooking = getNextBooking(bookings);
+        return ItemMapper.doItemDtoByOwner(item, lastBooking, nextBooking, comments);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<ItemDtoByOwner> findAll(long userId) {
-        List<Item> userItems = dao.findItemsByOwnerId(userId);
-        List<Comment> comments = commentDao.findByItemIdIn(userItems.stream()
-                .map(Item::getId)
-                .collect(Collectors.toList()));
-        LocalDateTime now = LocalDateTime.now();
+        User user = userDao.findById(userId).orElseThrow(() -> new NotFoundException("Нет пользователя по id {} " + userId));
+        List<Item> items = dao.findAllByOwnerId(userId);
+        List<Long> itemsId = items.stream().map(Item::getId).toList();
+        List<Booking> bookings = bookingDao.findAllByIdInAndEndBefore(itemsId, LocalDateTime.now());
+        List<Comment> comments = commentDao.findAllByItemIdIn(itemsId);
+        Map<Long, List<Booking>> bookingsMapByItemsId = new HashMap<>();
+        Map<Long, List<Comment>> commentsMapByItemsID = new HashMap<>();
+        for (Booking booking : bookings) {
+            bookingsMapByItemsId.computeIfAbsent(booking.getItem().getId(), k -> new ArrayList<>()).add(booking);
+        }
+        for (Comment comment : comments) {
+            commentsMapByItemsID.computeIfAbsent(comment.getItem().getId(), c -> new ArrayList<>()).add(comment);
+        }
+        List<ItemDtoByOwner> itemInfoDto = new ArrayList<>();
 
-        log.info("Найден список вещей пользователя с айди {}", userId);
-        return userItems.stream()
-                .map(item -> ItemMapper.doItemDtoByOwner(item,
-                        bookingDao.findByItemIdAndItemOwnerIdAndStartIsBeforeAndStatusIsNot(item.getId(), userId, now,
-                                BookingStatus.REJECTED),
-                        bookingDao.findByItemIdAndItemOwnerIdAndStartIsAfterAndStatusIsNot(item.getId(), userId, now,
-                                BookingStatus.REJECTED),
-                        comments))
-                .collect(Collectors.toList());
+        for (Item item : items) {
+            List<Comment> listComments = commentsMapByItemsID.getOrDefault(item.getId(), new ArrayList<>());
+            List<Booking> itemBookings = bookingsMapByItemsId.getOrDefault(item.getId(), new ArrayList<>());
+            Booking lastBooking = getLastBooking(itemBookings);
+            Booking nextBooking = getNextBooking(itemBookings);
+
+            ItemDtoByOwner infoDto = ItemMapper.doItemDtoByOwner(item, lastBooking, nextBooking, listComments);
+            itemInfoDto.add(infoDto);
+        }
+        return itemInfoDto;
+
     }
 
 
@@ -146,6 +157,24 @@ public class ItemServiceImpl implements ItemService {
             throw new NotFoundException("Редактирование вещи доступно только владельцу.");
         }
     }
+
+    private Booking getLastBooking(List<Booking> bookings) {
+        if (bookings.isEmpty() || bookings.size() == 1) {
+            return null;
+        }
+        Optional<Booking> lastBooking = bookings.stream()
+                .filter(booking -> booking.getStart() != null)
+                .max(Comparator.comparing(Booking::getStart));
+        return lastBooking.orElse(null);
+    }
+
+    private Booking getNextBooking(List<Booking> bookings) {
+        if (bookings.isEmpty() || bookings.size() == 1) {
+            return null;
+        }
+        Optional<Booking> lastBooking = bookings.stream()
+                .filter(booking -> booking.getEnd() != null)
+                .max(Comparator.comparing(Booking::getEnd));
+        return lastBooking.orElse(null);
+    }
 }
-
-
